--- a/src/app/components/menu/navbar/navbar.component.html
+++ b/src/app/components/menu/navbar/navbar.component.html
@@ -71,63 +71,73 @@
             </mat-accordion>
           </mat-tab>
           
-          <!-- REGISTRO-->
-          <mat-tab label="Registro">
-            <form [formGroup]="registroForm">
-              <div class="titulo">
-                <p>Nombres</p>
-                <p>Apellidos</p>
-                <p>Correo</p>
-              </div>
-              <div class="reg">
-                <mat-form-field class="form-field-spacing" appearance="fill">
-                  <input matInput autocomplete="off" formControlName="nombre">
-                </mat-form-field>
-                <mat-form-field class="form-field-spacing" appearance="fill">
-                  <input type="text" matInput autocomplete="off" formControlName="apellidos">
-                </mat-form-field>
-                <mat-form-field class="form-field-spacing" appearance="fill">
-                  <input type="email" matInput autocomplete="off" formControlName="correo">
-                </mat-form-field>
-              </div>
-              <div class="titulo">
-                <p>Tipo de documento</p>
-                <p>Numero de documento</p>
-              </div>
-              <div class="reg2">
-                <mat-form-field class="form-field-spacing2">
-                  <mat-label>Seleccione</mat-label>
-                  <mat-select formControlName="tipodocumento">
-                    <mat-option *ngFor="let tipo of typedocument" [value]="tipo">{{ tipo }}</mat-option>
-                  </mat-select>
-                </mat-form-field>
-                <mat-form-field class="form-field-spacing2" appearance="fill">
-                  <mat-label>Numero de documento</mat-label>
-                  <input matInput autocomplete="off" formControlName="numerodocumento">
-                </mat-form-field>
-              </div>
-              <div class="titulo">
-                <p>Contraseña</p>
-                <p>Confirmar contraseña</p>
-              </div>
-              <div class="reg2">
-                <mat-form-field class="form-field-spacing2" appearance="fill">
-                  <mat-label>Contraseña</mat-label>
-                  <input matInput [type]="hide ? 'password' : 'text'" formControlName="contrasena">
-                  <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                  </button>
-                </mat-form-field>
-                <mat-form-field class="form-field-spacing2" appearance="fill">
-                  <mat-label>Confirmar contraseña</mat-label>
-                  <input matInput [type]="hide ? 'password' : 'text'" formControlName="confirmarContrasena">
-                  <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                  </button>
-                </mat-form-field>
-              </div>
-              <button type="button" class="anchoGuardar" mat-raised-button style="background-color: #6AABA0;" (click)="guardarUsuario()">Guardar</button>
-            </form>
-          </mat-tab>
-    </mat-tab-group>
+ <!-- REGISTRO-->
+ <mat-tab label="Registro">
+  <form [formGroup]="registroForm">
+    <div class="titulo">
+      <p>Nombres</p>
+      <p>Apellidos</p>
+      <p>Correo</p>
+    </div>
+    <div class="reg">
+      <mat-form-field class="form-field-spacing" appearance="fill">
+        <input matInput autocomplete="off" formControlName="nombre">
+      </mat-form-field>
+      <mat-form-field class="form-field-spacing" appearance="fill">
+        <input type="text" matInput autocomplete="off" formControlName="apellidos">
+      </mat-form-field>
+        <mat-form-field class="form-field-spacing" appearance="fill">
+          <input type="email" matInput autocomplete="off" formControlName="correo">
+          <mat-error *ngIf="registroForm.get('correo')?.hasError('pattern')"> 
+            Por favor, introduce un correo electrónico válido de &#64;unbosque.edu.co
+          </mat-error>
+        </mat-form-field>
+                     
+    </div>
+    <div class="titulo">
+      <p>Tipo de documento</p>
+      <p>Numero de documento</p>
+    </div>
+    <div class="reg2">
+      <mat-form-field class="form-field-spacing2">
+        <mat-label>Seleccione</mat-label>
+        <mat-select formControlName="tipodocumento">
+          <mat-option *ngFor="let tipo of typedocument" [value]="tipo">{{ tipo }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field class="form-field-spacing2" appearance="fill">
+        <mat-label>Numero de documento</mat-label>
+        <input  matInput autocomplete="off" formControlName="numerodocumento">
+        <mat-error *ngIf="registroForm.get('numerodocumento')?.hasError('minlength')"> 
+          Por favor, introduce un número de documento válido, debe tener al menos 8 dígitos
+        </mat-error>
+      </mat-form-field>                
+    </div>
+    <div class="titulo">
+      <p>Contraseña</p>
+      <p>Confirmar contraseña</p>
+    </div>
+    <div class="reg2">
+      <mat-form-field class="form-field-spacing2" appearance="fill">
+        <mat-label>Contraseña</mat-label>
+        <input matInput [type]="hide ? 'password' : 'text'" formControlName="contrasena">
+        <mat-error *ngIf="registroForm.get('contrasena')?.hasError('minlength')"> 
+          Por favor introducir una contraseña con al menos 8 dígitos
+        </mat-error>
+        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+      </mat-form-field>
+      <mat-form-field class="form-field-spacing2" appearance="fill">
+        <mat-label>Confirmar contraseña</mat-label>
+        <input matInput [type]="hide ? 'password' : 'text'" formControlName="confirmarContrasena">
+        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+      </mat-form-field>
+    </div>
+    <button type="button" class="anchoGuardar" mat-raised-button style="background-color: #6AABA0;" (click)="guardarUsuario()">Guardar</button>
+  </form>
+</mat-tab>
+</mat-tab-group>
 </mat-card>
